--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Tech It Easy Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<div id="items-left-to-sell"></div>
+<div id="total-yield"></div>
+<div id="sold-total-yield"></div>
+<div id="tv1"></div>
+<div id="tv2"></div>
+<script src="main.js"></script>
 </body>
 </html>
