--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <div id="sold-total-yield"></div>
 <div id="tv1"></div>
 <div id="tv2"></div>
+<div id="tvInformation"></div>
+<div id="allTvInformation"></div>
 <script src="main.js"></script>
 </body>
 </html>
