--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <div id="items-left-to-sell"></div>
+
 <div id="total-yield"></div>
+
 <div id="sold-total-yield"></div>
+
 <div id="tv1"></div>
+
 <div id="tv2"></div>
+
 <div id="tvInformation"></div>
+
 <div id="allTvInformation"></div>
 
-<button onclick="getElementById('button1').innerHTML=sortOnPrice()">Sort on Price</button>
-<p id="button1"></p>
-<button onclick="getElementById('button2').innerHTML=getAmbiLightTvs()">AmbiLights</button>
-<p id="button2"></p>
-<button onclick="getElementById('button3').innerHTML=getSoldOutTvs()">Sold Out Items</button>
-<p id="button3"></p>
-
-<!--<button id="button1" onclick="sortOnPrice()">Sort on Price</button>-->
-<!--<div id="button2" onclick="getAmbiLightTvs()"></div>-->
-<!--<div id="button3" onclick="getSoldOutTvs()"></div>-->
+<button type="button" id="sort-on-price" >Sort on Price</button>
+<button type="button" id="get-ambilight" >Ambilights</button>
+<button type="button" id="sold-out-items" >Sold Out Items</button>
 
 <script src="main.js"></script>
+<script src="main2.js"></script>
+<script src="functions.js"></script>
 </body>
 </html>
